# src/swagger/swagger.json
@@ -62,74 +62,26 @@
 				"type": "object",
 				"additionalProperties": false
 			},
-			"AuthResponse": {
-				"properties": {
-					"user": {
-						"properties": {
-							"role": {
-								"type": "string"
-							},
-							"name": {
-								"type": "string"
-							},
-							"email": {
-								"type": "string"
-							},
-							"id": {
-								"type": "string"
-							}
-						},
-						"required": [
-							"role",
-							"name",
-							"email",
-							"id"
-						],
-						"type": "object"
-					},
-					"token": {
-						"type": "string"
-					}
-				},
-				"required": [
-					"user"
-				],
-				"type": "object",
-				"additionalProperties": false
-			},
 			"LoginRequest": {
 				"properties": {
-					"username": {
-						"type": "string"
-					},
-					"chunks": {
-						"type": "number",
-						"format": "double"
-					}
-				},
-				"required": [
-					"message",
-					"chunks"
-				],
-				"type": "object",
-				"additionalProperties": false
-			},
-			"RegisterRequest": {
-				"properties": {
-					"email": {
+					"name": {
 						"type": "string"
 					},
 					"password": {
 						"type": "string"
-					},
-					"name": {
+					}
+				},
+				"type": "object",
+				"additionalProperties": false
+			},
+			"WithdrawRequest": {
+				"properties": {
+					"userId": {
 						"type": "string"
 					}
 				},
 				"required": [
-					"email",
-					"password",
-					"name"
+					"userId"
 				],
 				"type": "object",
 				"additionalProperties": false
@@ -453,6 +405,46 @@
 				],
 				"security": [],
 				"parameters": []
+			}
+		},
+		"/auth/withdraw": {
+			"delete": {
+				"operationId": "Withdraw",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"properties": {
+										"message": {
+											"type": "string"
+										}
+									},
+									"required": [
+										"message"
+									],
+									"type": "object"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Auth"
+				],
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/WithdrawRequest"
+							}
+						}
+					}
+				}
 			}
 		},
 		"/ingest": {
